tests/ui-nightly/diagnostic-not-implemented-immutable.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Immutable` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-immutable.rs:18:23
   |
18 |     takes_immutable::<NotZerocopy>();
   |                       ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::Immutable` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../../zerocopy-derive/tests/include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(Immutable)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
note: required by a bound in `takes_immutable`
  --> tests/ui-nightly/diagnostic-not-implemented-immutable.rs:21:23
   |
21 | fn takes_immutable<T: Immutable>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_immutable`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-386dc47a09db7dc6.long-type-5155786838693012745.txt'
   = note: consider using `--verbose` to print the full type name to the console
